styles/sass/_header.scss
header {
	padding: 150px 0 100px;
	width: 55%;
}

.current-day-container {
	height: 200px;
}

.heading-container h1 {
	display: inline-block;
	font-size: 3rem;
	font-family: $secondary-font;
	font-weight: 600;
	border-bottom: 3px solid $tertiary-color;
	margin-bottom: 50px;
	padding-bottom: 10px;
}

.heading-container h2 {
	color: $primary-color;
	font-size: 2rem;
	margin-bottom: 50px;
}

.current-day-container-stats {
	font-size: 2rem;
	background: $card-background-color;
	border-radius: 5px;
	display: flex;
	align-items: center;
	justify-content: space-between;
	padding: 40px;
	width: 100%;
	
	h2:first-child,
	h3:first-child {
		margin-bottom: 50px;
	}
}

.current-day-container-stats h2 {
	color: $secondary-color;
}

.current-day-container-stats h3 {
	width: 250px;
}

.sol-date-container {
	border-right: 3px solid $secondary-color;
	padding-right: 9%;
}


header p {
	margin-top: 10px;
}

.button-container {
	display: flex;
	align-items: flex-start;
	flex-direction: column;
	button {
		background-color: inherit;
		color: $primary-color;
		font-family: $secondary-font;
		font-size: 1.5rem;
		font-weight: 600;
		border: 3px solid $tertiary-color;
		border-radius: 5px;
		margin-top: 40px;
		padding: 10px;
		transition: background-color .35s, color .35s;
		&:hover,
		&:focus {
			background-color: $primary-color;
			color: $secondary-color;
		}
	}
}

.header-image-container {
	border-radius: 5px;
	margin-top: 50px;
	width: 100%;
	height: 300px;
	img {
		object-fit: cover;
		border-radius: 5px;
		height: 100%;
		width: 100%;
	}
	figcaption {
		color: $secondary-color;
		font-size: 1rem;
		line-height: 1.4rem;
		background-color: $card-background-color;
		border-radius: 5px;
		padding: 40px;
		margin-top: 40px;
		width: 100%;
	}
}

.header-image-container figcaption a {
	@include text-shadow();
	border-bottom: 2px solid $tertiary-color;
	font-weight: 700;
	transition: color .35s;
		&:hover,
		&:focus {
			color: $secondary-color;
		}
}

